Message library added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,26 +9,33 @@ option(APP_BUILD_SAMPLES "build samples" OFF)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-
-#project name
-set(PROJECT_NAME cppmsgwnd)
-
+    
 # app directories
 set(APP_SAMPLES_DIR ./samples/)
-set(APP_SOURCE_DIR ./src)
+set(APP_SOURCES_DIR ./src/)
 set(APP_INCLUDE_DIR ./inc)
 
-# source files
-file(GLOB_RECURSE APP_SOURCE_FILES ${APP_SOURCE_DIR}/*.cpp)
 
-# cpplogger project
-project(${PROJECT_NAME} VERSION 1.0)
-add_library(${PROJECT_NAME} SHARED ${APP_SOURCE_FILES})
-target_compile_definitions(${PROJECT_NAME} PRIVATE CPPMSGWND_EXPORTS)
-target_include_directories(${PROJECT_NAME} PRIVATE ${APP_INCLUDE_DIR})
+#project name
+set(PROJECT_NAME_1 cppmsgwnd)
+
+# project
+project(${PROJECT_NAME_1} VERSION 1.0)
+add_library(${PROJECT_NAME_1} SHARED ${APP_SOURCES_DIR}/CCPPMSGWND.cpp)
+target_compile_definitions(${PROJECT_NAME_1} PRIVATE CPPMSGWND_EXPORTS)
+target_include_directories(${PROJECT_NAME_1} PRIVATE ${APP_INCLUDE_DIR})
+
+#project name
+set(PROJECT_NAME_2 cppwndmsg)
+
+# project
+project(${PROJECT_NAME_2} VERSION 1.0)
+add_library(${PROJECT_NAME_2} SHARED ${APP_SOURCES_DIR}/CCPPWNDMSG.cpp)
+target_compile_definitions(${PROJECT_NAME_2} PRIVATE CPPWNDMSG_EXPORTS)
+target_include_directories(${PROJECT_NAME_2} PRIVATE ${APP_INCLUDE_DIR})
 
 # samples
-set(SAMPLE_PROJECTS cppmsgwnd_sample_client cppmsgwnd_sample_wnd)
+set(SAMPLE_PROJECTS cppmsgwnd_sample cppwndmsg_sample)
 foreach(SAMPLE_PROJECT ${SAMPLE_PROJECTS})
     if(APP_BUILD_SAMPLES)
         project(${SAMPLE_PROJECT} VERSION 1.0)
